--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
@@ -98,7 +98,7 @@
             <td width="10%"></td>
             <td width="5%">
                 <a><i class="glyphicon glyphicon-search"></i></a>
-                <a><i class="glyphicon glyphicon-file"></i></a>
+                <a><i class="glyphicon glyphicon-file" [routerLink]="['/pe/fundReport/', firm.id]"></i></a>
             </td>
         </tr>
 
