--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <!--<h4><small>login: user pass: Qwerty123</small></h4>-->
     <!--<div class="row">-->
-        <!--<div class="col-md-12">-->
-            <!--<div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>-->
-                <!--<object class='tableauViz' width='100%' height='1936' style='display:none;'>-->
-                    <!--<param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />-->
-                    <!--<param name='site_root' value='' />-->
-                    <!--<param name='name' value='MacroMonitor&#47;MacroMonitor' />-->
-                    <!--<param name='tabs' value='no' />-->
-                    <!--<param name='toolbar' value='no' />-->
-                    <!--<param name='showShareOptions' value='false' />-->
-                <!--</object>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="col-md-12">-->
+    <!--<div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>-->
+    <!--<object class='tableauViz' width='100%' height='1936' style='display:none;'>-->
+    <!--<param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />-->
+    <!--<param name='site_root' value='' />-->
+    <!--<param name='name' value='MacroMonitor&#47;MacroMonitor' />-->
+    <!--<param name='tabs' value='no' />-->
+    <!--<param name='toolbar' value='no' />-->
+    <!--<param name='showShareOptions' value='false' />-->
+    <!--</object>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
 
     <ul class="nav nav-tabs">
@@ -22,17 +22,20 @@
         <li>
             <a data-toggle="tab" href="#us">US</a>
         </li>
+        <li>
+            <a data-toggle="tab" href="#china">China</a>
+        </li>
     </ul>
     <div class="tab-content">
         <div id="global" class="tab-pane fade in active">
-        <br/>
+            <br/>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table">
                     </div>
                 </div>
             </div>
-        <br/>
+            <br/>
             <div class="row">
                 <div class="col-md-12">
                     <div id="line_chart">
@@ -41,19 +44,35 @@
             </div>
         </div>
         <div id="us" class="tab-pane fade">
-        <br/>
+            <br/>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table_us">
                     </div>
                 </div>
             </div>
-        <br/>
+            <br/>
             <div class="row">
-              <div class="col-md-12">
-                  <div id="line_chart_us">
-                  </div>
-              </div>
+                <div class="col-md-12">
+                    <div id="line_chart_us">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="china" class="tab-pane fade">
+            <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="table_china">
+                    </div>
+                </div>
+            </div>
+            <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="line_chart_china">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
