Fund profile - incomplete Added returns

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -112,7 +112,7 @@
                             <li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>
                             <li><a [routerLink]="['/hf/report']">Report </a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a [routerLink]="['/hf/fundProfile/0']">New Fund </a></li>
+                            <!--<li><a [routerLink]="['/hf/fundProfile/0']">New Fund </a></li>-->
                             <li><a [routerLink]="['/hf/managerProfile/0']">New Manager </a></li>
 
                         </ul>
