--- a/nicnbk-ui-angular2/src/app/hf/view/hf.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.fund-profile.component.html
@@ -22,9 +22,9 @@
         <li>
             <a data-toggle="tab" href="#odd">ODD</a>
         </li>
-        <li>
-            <a data-toggle="tab" href="#quant_dd">QUANT DD</a>
-        </li>
+        <!--<li>-->
+            <!--<a data-toggle="tab" href="#quant_dd">QUANT DD</a>-->
+        <!--</li>-->
     </ul>
 
     <div class="tab-content">
@@ -53,20 +53,26 @@
                             <tr>
                                 <td>Inception date</td>
                                 <td>
-                                    <input type="text" class="form-control" [(ngModel)]="fund.inception"/>
+                                    <!--<input type="text" class="form-control" [(ngModel)]="fund.inception"/>-->
+                                    <div class='input-group date col-md-2' id='inceptionDate' style="width: 100%">
+                                        <input type="text" class="form-control" id="inceptionDateValue" [(ngModel)]="fund.inceptionDate"/>
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-calendar"></span>
+                                            </span>
+                                    </div>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Firm AUM</td>
-                                <td></td>
+                                <td>{{fund.manager.aumText}}</td>
                             </tr>
                             <tr>
                                 <td>Fund AUM</td>
                                 <td>
                                     <input type="text" class="form-control" style="display:inline; width: 30%" [(ngModel)]="fund.aum"/>
                                     <select class="form-control" style="display:inline; width: 25%" [(ngModel)]="fund.aumDigit">
-                                        <option value="MLN">M</option>
-                                        <option value="BLN">B</option>
+                                        <option value="M">M</option>
+                                        <option value="B">B</option>
                                     </select>
                                     <select class="form-control" style="display:inline; width: 35%" [(ngModel)]="fund.aumCurrency">
                                         <option value="-">--</option>
@@ -77,7 +83,8 @@
                             <tr>
                                 <td>Strategy</td>
                                 <td>
-                                    <select class="form-control" style="width: 100%" [(ngModel)]="fund.strategy" (ngModelChange)="strategyChanged()">
+                                    <select class="form-control" style="width: 100%" [(ngModel)]="fund.strategy" (ngModelChange)="strategyChanged()"
+                                            [disabled]="fund.strategyBreakdownList != null && fund.strategyBreakdownList.length > 0">
                                         <option value="-">---</option>
                                         <option *ngFor="let item of strategyLookup" [value]="item.code">{{item.nameEn}}</option>
                                     </select>
@@ -228,7 +235,7 @@
                                             [disabled]="fund.strategy == null || fund.strategy === '-'">
                                         <span role="button" class="glyphicon glyphicon-plus"></span>
                                     </button>
-                                    <button class="btn btn-xs btn-success" type="button" (click)="drawGraph()"
+                                    <button class="btn btn-xs btn-success" type="button" (click)="drawSubstrategiesChart()"
                                             [disabled]="fund.strategy == null || fund.strategy === '-'">
                                         <span role="button" class="glyphicon glyphicon-refresh"></span>
                                     </button>
@@ -273,7 +280,6 @@
                             <td>Category</td>
                             <td>Fund</td>
                         </tr>
-                        <div *ngIf="fund.investorBaseList != null">
                         <tr *ngFor="let item of fund.investorBaseList">
                             <td width="70%">
                                 <input type="text" class="form-control"[(ngModel)]="item.category"/>
@@ -287,8 +293,6 @@
                                 </button>
                             </td>
                         </tr>
-                        </div>
-
                     </table>
                     </div>
 
@@ -482,6 +486,31 @@
                     </tr>
                 </table>
                 </div>
+                <div class="col-md-1">&nbsp;</div>
+                <div class="col-md-5">
+                    <table class="table table-hover table-responsive table-condensed">
+                        <tr>
+                            <td>GCM Approved</td>
+                            <td>
+                                <select class="form-control" [(ngModel)]="fund.GCMApproved">
+                                    <option value="null">---</option>
+                                    <option value="true">Yes</option>
+                                    <option value="false">No</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>NIC Approved</td>
+                            <td>
+                                <select class="form-control" [(ngModel)]="fund.NICApproved">
+                                    <option value="null">---</option>
+                                    <option value="true">Yes</option>
+                                    <option value="false">No</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
 
             <br/>
@@ -509,35 +538,59 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let return of fund.returns">
-                            <td><input type="text" size="4" class="form-control"[(ngModel)]="return.year"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.jan" (ngModelChange)="calculateReturnsYTD(return)"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.feb"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.mar"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.apr"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.may"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.jun"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.jul"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.aug"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.sep"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.oct"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.nov"/></td>
-                            <td><input type="text" size="2" class="form-control"[(ngModel)]="return.dec"/></td>
-                            <td><input type="text" readonly size="2" class="form-control" [value]="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="3" class="form-control hfReturns"
+                                       [(ngModel)]="return.year" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.january < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.january" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.february < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.february" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.march < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.march"(ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.april < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.april" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.may < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.may" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.june < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.june" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.july < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.july" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.august < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.august" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.september < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.september" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.october < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.october" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.november < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.november" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" size="4" class="form-control hfReturns" [style.color]="return.devember < 0 ? 'red' : 'black'"
+                                       [(ngModel)]="return.december" (ngModelChange)="calculateReturnsYTD(return)"/></td>
+                            <td><input type="text" readonly size="5" class="form-control hfReturns" [style.color]="calculateReturnsYTD(return) < 0 ? 'red' : 'black'"
+                                       [value]="calculateReturnsYTD(return)"/></td>
                             <td><button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeReturn(return)">
                                 <span class="glyphicon glyphicon-minus"></span>
-                            </button></td>
+                            </button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
                 </div>
-
                 <div class="col-md-1">
-                    <button class="btn-xs btn-primary" type="button" (click)="addReturn()">
-                        <span class="glyphicon glyphicon-plus"></span>
-                    </button>
+                    <div class="row">
+                        <button class="btn-xs btn-primary" type="button" (click)="addReturn()">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </button>
+                    </div>
+                    <br/>
+                    <div class="row">
+                        <a class="btn btn-info btn-sm" data-toggle="modal"
+                           data-target="#returnInputModal">
+                            <span class="glyphicon glyphicon-circle-arrow-up"></span>
+                        </a>
+                    </div>
                 </div>
             </div>
 
+            <br/>
             <br/>
             <div class="row">
                 <div class="col-md-12">
@@ -553,15 +606,42 @@
                 </div>
             </div>
 
+            <div class="modal fade" id="returnInputModal" role="dialog">
+                <div class="modal-dialog" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <!--<h3 class="modal-title" >HEADER</h3>-->
+                        </div>
+                        <div class="modal-body">
+                            <textarea class="form-control" [(ngModel)]="uploadedReturns"></textarea>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-success pull-right" (click)="parseReturns()">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div id="idd" class="tab-pane fade">
             Investment Due Diligence
+            <div style="min-height: 150px;">
+
+            </div>
         </div>
         <div id="odd" class="tab-pane fade">
             Operational Due Diligence
+            <div style="min-height: 150px;">
+
+            </div>
         </div>
-        <div id="quant_dd" class="tab-pane fade">
-            Quantitative Due Diligence
-        </div>
+        <!--<div id="quant_dd" class="tab-pane fade">-->
+            <!--Quantitative Due Diligence-->
+            <!--<div style="min-height: 150px;">-->
+
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </div>
