--- a/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
@@ -37,7 +37,7 @@
                     <tr>
                         <td class="col-md-1">Manager Type</td>
                         <td class="col-md-3">
-                            <select style="width: 100%" [(ngModel)]="manager.managerType">
+                            <select style="width: 100%" class="form-control" [(ngModel)]="manager.managerType">
                                 <option value="0">---</option>
                                 <option *ngFor="let item of managerTypeLookup" [value]="item.code">{{item.nameEn}}</option>
                             </select>
@@ -61,10 +61,24 @@
                             <!--</select>-->
                         <!--</td>-->
                     <!--</tr>-->
+                    <!--<tr>-->
+                        <!--<td class="col-md-1">Inception</td>-->
+                        <!--<td class="col-md-3">-->
+                            <!--<input type="text" [(ngModel)]="manager.inception"/>-->
+                        <!--</td>-->
+                    <!--</tr>-->
                     <tr>
                         <td class="col-md-1">Inception</td>
                         <td class="col-md-3">
-                            <input type="text" [(ngModel)]="manager.inception"/>
+                            <!--<input type="text" [(ngModel)]="manager.inceptionDate"/>-->
+
+                            <div class='input-group date col-md-2' id='inceptionDate' style="width: 100%">
+                                <input type="text" class="form-control" id="inceptionDateValue" [(ngModel)]="manager.inceptionDate"/>
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                            </div>
+
                         </td>
                     </tr>
                     <!--<tr>-->
@@ -81,12 +95,22 @@
                         <td class="col-md-3">
                             <input type="text" class="form-control" style="display:inline; width: 30%" [(ngModel)]="manager.aum"/>
                             <select class="form-control" style="display:inline; width: 25%" [(ngModel)]="manager.aumDigit">
-                                <option value="MLN">M</option>
-                                <option value="BLN">B</option>
+                                <option value="M">M</option>
+                                <option value="B">B</option>
                             </select>
                             <select class="form-control" style="display:inline; width: 35%" [(ngModel)]="manager.aumCurrency">
                                 <option value="-">--</option>
                                 <option *ngFor="let currency of currencyLookup">{{currency.code}}</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-1">Meetings in the past</td>
+                        <td class="col-md-3">
+                            <select style="width: 100%" class="form-control" [(ngModel)]="manager.meetingsInThePast">
+                                <option value="null">---</option>
+                                <option value="true">Yes</option>
+                                <option value="false">No</option>
                             </select>
                         </td>
                     </tr>
@@ -110,43 +134,43 @@
                     <tr>
                         <td class="col-md-1">Fund Managers</td>
                         <td class="col-md-5">
-                            <textarea style="width:100%" [(ngModel)]="manager.fundManagers"></textarea>
+                            <textarea style="width:100%" class="form-control" [(ngModel)]="manager.fundManagers"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Headquarters</td>
                         <td class="col-md-5">
-                            <textarea style="width:100%" [(ngModel)]="manager.headquarters"></textarea>
+                            <textarea style="width:100%"  class="form-control" [(ngModel)]="manager.headquarters"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Contact person</td>
                         <td class="col-md-5">
-                            <textarea style="width:100%" [(ngModel)]="manager.contactPerson"></textarea>
+                            <textarea style="width:100%" class="form-control" [(ngModel)]="manager.contactPerson"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Telephone</td>
                         <td class="col-md-5">
-                            <input type="text" [(ngModel)]="manager.telephone"/>
+                            <input type="text" class="form-control" [(ngModel)]="manager.telephone"/>
                         </td>
                     </tr>
-                    <tr>
-                        <td class="col-md-1">Fax</td>
-                        <td class="col-md-5">
-                            <input type="text" [(ngModel)]="manager.fax"/>
-                        </td>
-                    </tr>
+                    <!--<tr>-->
+                        <!--<td class="col-md-1">Fax</td>-->
+                        <!--<td class="col-md-5">-->
+                            <!--<input type="text" [(ngModel)]="manager.fax"/>-->
+                        <!--</td>-->
+                    <!--</tr>-->
                     <tr>
                         <td class="col-md-1">Website</td>
                         <td class="col-md-5">
-                            <input type="text" [(ngModel)]="manager.website"/>
+                            <input type="text" class="form-control" [(ngModel)]="manager.website"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Email</td>
                         <td class="col-md-5">
-                            <input type="text" [(ngModel)]="manager.email"/>
+                            <input type="text" class="form-control" [(ngModel)]="manager.email"/>
                         </td>
                     </tr>
                 </table>
@@ -173,7 +197,7 @@
                         <th>&nbsp;</th>
                         <th>FUND</th>
                         <th>STRATEGY</th>
-                        <th>LOCATION</th>
+                        <th>INCEPTION</th>
                         <th>UPDATED</th>
                         <th>ACTIONS</th>
                     </thead>
@@ -182,72 +206,63 @@
                             <td width="5%"></td>
                             <td width="30%"><a [routerLink]="['/hf/fundProfile/', fund.id]">{{fund.name}}</a></td>
                             <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                            <td width="10%">{{fund.strategy}}</td>
-                            <td width="10%">{{fund.location}}</td>
-                            <td width="10%">{{fund.updated}}</td>
+                            <td width="10%">{{getStrategyName(fund.strategy)}}</td>
+                            <td width="10%">{{fund.inceptionDate}}</td>
+                            <td width="10%">{{fund.updateDate}}</td>
                             <td width="5%">
                                 <a><i class="glyphicon glyphicon-search"></i></a>
                                 <a><i class="glyphicon glyphicon-file"></i></a>
                                 <a><i class="glyphicon glyphicon-plus"></i></a>
                             </td>
                         </tr>
-                        <!--<tr>-->
-                            <!--<td width="5%"></td>-->
-                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
-                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
-                            <!--<td width="10%">Multi</td>-->
-                            <!--<td width="10%">Chicago, US</td>-->
-                            <!--<td width="10%">10/10/2016</td>-->
-                            <!--<td width="5%">-->
-                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
-                            <!--</td>-->
-                        <!--</tr>-->
-                        <!--<tr>-->
-                            <!--<td width="5%"></td>-->
-                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
-                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
-                            <!--<td width="10%">Multi</td>-->
-                            <!--<td width="10%">Chicago, US</td>-->
-                            <!--<td width="10%">10/10/2016</td>-->
-                            <!--<td width="5%">-->
-                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
-                            <!--</td>-->
-                        <!--</tr>-->
-                        <!--<tr>-->
-                            <!--<td width="5%"></td>-->
-                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
-                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
-                            <!--<td width="10%">Multi</td>-->
-                            <!--<td width="10%">Chicago, US</td>-->
-                            <!--<td width="10%">10/10/2016</td>-->
-                            <!--<td width="5%">-->
-                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
-                            <!--</td>-->
-                        <!--</tr>-->
-                        <!--<tr>-->
-                            <!--<td width="5%"></td>-->
-                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
-                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
-                            <!--<td width="10%">Multi</td>-->
-                            <!--<td width="10%">Chicago, US</td>-->
-                            <!--<td width="10%">10/10/2016</td>-->
-                            <!--<td width="5%">-->
-                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
-                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
-                            <!--</td>-->
-                        <!--</tr>-->
+
                     </tbody>
                 </table>
             </div>
         </div>
-        <div id="meetings_calls" class="tab-pane fade in active">
+        <div id="meetings_calls" class="tab-pane fade">
+            <div class="jumbotron">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="meetingType">Meeting Type</label>
+                                <select class="form-control" id="meetingType" [(ngModel)]="searchParams.meetingType">
+                                    <option value="NONE">---</option>
+                                    <option *ngFor = "let type of meetingTypes" [value]="type.code">{{type.nameEn}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="fromDateDTPickeer">From</label>
+                            <div class='input-group date col-md-3' id='fromDateDTPickeer' style="width: 100%">
+                                <input type='text' class="form-control" id="fromDate" />
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="untilDateDTPickeer">To</label>
+                            <div class='input-group date col-md-3' id='untilDateDTPickeer' style="width: 100%">
+                                <input type='text' class="form-control" id="toDate"/>
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-success pull-right" (click)="search()">Search</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <span style="color: #002a80">Manager meetings & calls under construction. Please use 'M2S2' instead.</span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
